--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ python:
  - "nightly"
 install:
  - "pip install pytest"
- - "pip install -r requirements.txt"
-script: python -m pytest gitremote
+ - "pip -m install requests --no-cache-dir"
